@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-20T08:23:53Z",
+  "timestamp" : "2022-04-21T08:23:20Z",
   "count_outdated" : 106,
   "uniques_outdated" : 72,
-  "count" : 137,
-  "uniques" : 93,
+  "count" : 138,
+  "uniques" : 94,
   "clones" : [
     {
       "timestamp": "2022-04-08T00:00:00Z",
@@ -58,6 +58,13 @@
       "timestamp": "2022-04-20T00:00:00Z",
       "count": 4,
       "count_minmax": [ 4, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-04-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
