@@ -1,5 +1,5 @@
 {
-  "count": 31,
+  "count": 32,
   "uniques": 14,
   "clones": [
     {
@@ -40,6 +40,11 @@
     {
       "timestamp": "2022-04-20T00:00:00Z",
       "count": 4,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-21T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
